Release ...
* m4: Handle multibyte quote characters with defn() correctly (patch by
  Joe Krahn).
* make: Mac OS X compilation fix (Stefan Tramm).
* make: Compilation fix for 64-bit environments.
* make: Do not crash if a backslash appears at the end of the value of
  the MAKEFLAGS environment variable (bug reported by Stefano Lattarini).

Release 070527
* admin: A manual page is available, based on source code released by Sun.
* make: Macro definitions following "else" in an effective branch are
  now handled correctly.
* make: Removed a "extern char **environ;" declaration to make it
  compile on CentOS 5.
* vc: Recognizes the control character according to the LC_CTYPE locale
  now, and has no static size limits anymore.
* lex: Avoid a symbol conflict with the index() function that caused the
  build to fail on some platforms.

Release 070311
* make: The SVR4.2 syntax for parallel builds has been added. This adds
  the "-B" and "-P" options as well as the ".MUTEX:" special target.
* make: The SVR4.2 "-w" option has been added to suppress warnings.
* make: The "-u" option (unconditionally make the targets, even those
  that are not outdated) is now a documented feature.
* make: Comments following "ifeq" and other conditionals are now handled
  correctly.
* make: Error messages now include message numbers for use with the
  "help" command.
* sccs: The commands "-R info", "-R tell", and "-R clean" now operate
  correctly. They previously terminated operation prematurely when an
  "SCCS" directory was found but other sub-directories at the current
  recursion level had not yet been processed.

Release 070218
* sccs: A "-R" option has been added to enable recursive operation on
  subdirectories.
* sccs: A manual page has been added (based on the 4.3BSD-Tahoe page).
* make: The default variant now has the ".GET:" special target enabled
  to retrieve data from an s.file in the current directory, similar to