@@ -5,7 +5,7 @@
 #else
 #define USED
 #endif
-static const char id[] USED = "@(#)make.sl	1.43 (gritter) 8/7/10";
+static const char id[] USED = "@(#)make.sl	1.44 (gritter) 8/7/10";
 /* SLIST */
 /*
 ../bsd/bsd.cc: * Sccsid @(#)bsd.cc	1.6 (gritter) 01/22/07
@@ -13,13 +13,11 @@ static const char id[] USED = "@(#)make.sl	1.43 (gritter) 8/7/10";
 ../src/dist.cc: * Sccsid @(#)dist.cc	1.5 (gritter) 01/20/07
 ../src/ar.cc: * Sccsid @(#)ar.cc	1.5 (gritter) 01/13/07
 ../src/dosys.cc: * Sccsid @(#)dosys.cc	1.4 (gritter) 01/13/07
-../src/macro.cc: * Sccsid @(#)macro.cc	1.4 (gritter) 01/13/07
 ../src/make.cc: * Sccsid @(#)make.cc	1.2 (gritter) 01/07/07
 ../src/depvar.cc: * Sccsid @(#)depvar.cc	1.3 (gritter) 01/13/07
 ../src/implicit.cc: * Sccsid @(#)implicit.cc	1.5 (gritter) 2/16/07
 ../src/files.cc: * Sccsid @(#)files.cc	1.7 (gritter) 01/23/07
 ../src/posix.cc: * Sccsid @(#)posix.cc	1.1 (gritter) 01/13/07
-../src/misc.cc: * Sccsid @(#)misc.cc	1.12 (gritter) 3/7/07
 ../src/parallel.cc: * Sccsid @(#)parallel.cc	1.7 (gritter) 3/7/07
 ../src/getopt.c: * Sccsid @(#)getopt.c	1.10 (gritter) 12/16/07
 ../src/nse.cc: * Sccsid @(#)nse.cc	1.2 (gritter) 01/07/07
@@ -27,11 +25,13 @@ static const char id[] USED = "@(#)make.sl	1.43 (gritter) 8/7/10";
 ../src/globals.cc: * Sccsid @(#)globals.cc	1.8 (gritter) 3/6/07
 ../src/rep.cc: * Sccsid @(#)rep.cc	1.3 (gritter) 01/13/07
 ../src/state.cc: * Sccsid @(#)state.cc	1.4 (gritter) 2/26/07
-../src/doname.cc: * Sccsid @(#)doname.cc	1.11 (gritter) 3/7/07
 ../src/pmake.cc: * Sccsid @(#)pmake.cc	1.6 (gritter) 01/18/07
-../src/read2.cc: * Sccsid @(#)read2.cc	1.10 (gritter) 3/8/07
 ../src/nse_printdep.cc: * Sccsid @(#)nse_printdep.cc	1.4 (gritter) 01/13/07
-../src/main.cc: * Sccsid @(#)main.cc	1.25 (gritter) 8/7/10
+../src/misc.cc: * Sccsid @(#)misc.cc	1.12 (gritter) 3/7/07
+../src/main.cc: * Sccsid @(#)main.cc	1.26 (gritter) 8/7/10
+../src/doname.cc: * Sccsid @(#)doname.cc	1.11 (gritter) 3/7/07
+../src/read2.cc: * Sccsid @(#)read2.cc	1.10 (gritter) 3/8/07
+../src/macro.cc: * Sccsid @(#)macro.cc	1.4 (gritter) 1/13/07
 ../mksh/i18n.cc: * Sccsid @(#)i18n.cc	1.3 (gritter) 01/13/07
 ../mksh/read.cc: * Sccsid @(#)read.cc	1.3 (gritter) 01/13/07
 ../mksh/dosys.cc: * Sccsid @(#)dosys.cc	1.10 (gritter) 3/7/07
@@ -68,8 +68,8 @@ static const char id[] USED = "@(#)make.sl	1.43 (gritter) 8/7/10";
 ../vroot/readlink.cc: * Sccsid @(#)readlink.cc	1.2 (gritter) 01/07/07
 ../vroot/utimes.cc: * Sccsid @(#)utimes.cc	1.2 (gritter) 01/07/07
 ../mksdmsi18n/libmksdmsi18n_init.cc: * Sccsid @(#)libmksdmsi18n_init.cc	1.5 (gritter) 01/13/07
-../include/mk/defs.h: * Sccsid @(#)defs.h	1.9 (gritter) 3/7/07
 ../include/mk/copyright.h: * Sccsid @(#)copyright.h	1.2 (gritter) 01/07/07
+../include/mk/defs.h: * Sccsid @(#)defs.h	1.10 (gritter) 8/7/10
 ../include/avo/avo_alloca.h: * Sccsid @(#)avo_alloca.h	1.4 (gritter) 01/21/07
 ../include/avo/intl.h: * Sccsid @(#)intl.h	1.3 (gritter) 01/13/07
 ../include/bsd/bsd.h: * Sccsid @(#)bsd.h	1.4 (gritter) 01/22/07
