@@ -4,7 +4,8 @@ Release ...
 * make: Mac OS X compilation fix (Stefan Tramm).
 * make: Compilation fix for 64-bit environments.
 * make: Do not crash if a backslash appears at the end of the value of
-  the MAKEFLAGS environment variable (bug reported by Stefano Lattarini).
+  the MAKEFLAGS environment variable, and preserve trailing spaces in macro
+  names (bug reported by Stefano Lattarini).
 
 Release 070527
 * admin: A manual page is available, based on source code released by Sun.
